tests/ui/feature-gates/feature-gate-compiler-builtins.stderr
error[E0658]: the `#[compiler_builtins]` attribute is used to identify the `compiler_builtins` crate which contains compiler-rt intrinsics and will never be stable
  --> $DIR/feature-gate-compiler-builtins.rs:1:1
   |
LL | #![compiler_builtins]
   | ^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(compiler_builtins)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
