tests/ui/feature-gates/feature-gate-compiler-builtins.rs
#![compiler_builtins] //~ ERROR the `#[compiler_builtins]` attribute is

fn main() {}
